expected/main/gens/primStructSelect-neg-64.err
ERROR: "actual/main/gens/primStructSelect-neg-64.lc", line 9
external selectP1 {primStructSelect S    "p" SW} :: Ref S -> Unit -> Ref SW
         ^
No generated implementation: There is no "p" field in S

ERROR: "actual/main/gens/primStructSelect-neg-64.lc", line 10
external selectP2 {primStructSelect Word "p" SW} :: Ref S -> Unit -> Ref SW
         ^
No generated implementation: Argument 1 (Word) does not have expected kind (area)

ERROR: "actual/main/gens/primStructSelect-neg-64.lc", line 11
external selectP3 {primStructSelect S      4 SW} :: Ref S -> Unit -> Ref SW
         ^
No generated implementation: Argument 2 (4) does not have expected kind (lab)

ERROR: Aborting after 3 previously reported errors

